# antenna-pattern

./: .gitignore  2dpattern.py  3D_Models.txt  3D_Patterns.txt  3dpattern.py  AIR6488.txt  DATA.CSV  Dockerfile  README.md  input.txt  main.m  main.py  mimo.py  mimo2.py  msiread.py  patternFromSlices.py  pyproject.toml  requirements.txt  ruff.toml  test4.py
3d/: camouflage.stl  macro.glb  macro.kmz  monopole.glb  monopole.stl  monopole_vdf.glb  triangle.stl  triangle_with_antenna.glb
