[tool.poetry]
name = "antenna-pattern"
version = "0.2.0"
description = "3D Visualize Antenna Pattern"
authors = ["daiyabarus <daiyabarus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^2.1.0"
streamlit = "^1.37.1"
matplotlib = "^3.9.2"
pyvista = "^0.44.1"
rasterio = "^1.3.10"
stpyvista = "^0.0.19"
plotly = "^5.23.0"
shapely = "^2.0.6"
bokeh = "3.4.0"
panel = "1.4.5"
pyproj = "^3.6.1"
owslib = "^0.31.0"
pillow = "^10.4.0"
gemgis = "^1.1.8"
fiona = "^1.9.6"
rio-cogeo = "^5.3.3"
rioxarray = "^0.17.0"
geoviews = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
