[tool.poetry]
name = "antenna-pattern"
version = "0.2.1"
description = "3D Antenna Pattern"
authors = ["daiyabarus <daiyabarus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^2.1.0"
pandas = "^2.2.2"
plotly = "^5.23.0"
pyvista = "^0.44.1"
stpyvista = "^0.0.19"
streamlit = "^1.37.1"
bokeh = "^3.5.2"
panel = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
