[tool.poetry]
name = "antenna-pattern"
version = "0.1.2"
description = "3D Antenna Pattern"
authors = ["daiyabarus <daiyabarus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"


[tool.poetry.group.dev.dependencies]
pyvista = "^0.44.1"
stpyvista = "^0.0.19"
streamlit = "^1.37.1"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
plotly = "^5.23.0"
bokeh = "^3.5.2"
panel = "^1.4.5"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
